# Webcrawling_hsu_home

./: README.md
hanseohomes/: file.py  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
hanseohomes/.cache/fontconfig/: d589a48862398ed80a3d6066f4f56f4c-le64.cache-7
hanseohomes/.cache/jedi/CPython-310-33/: 4305da1ea25c27fce08bd14001b76fd54fe42a0724bbd5168c76680a56eda5be-084dd654fa6dec117fcb0a3a05059a5d283f04e3f900447ab3281321658e6f3e.pkl  4305da1ea25c27fce08bd14001b76fd54fe42a0724bbd5168c76680a56eda5be-1a711e91d9d18f14582d3b9373d16192bf462d419e2734ea8712773525d35435.pkl  4305da1ea25c27fce08bd14001b76fd54fe42a0724bbd5168c76680a56eda5be-617f002bda6d158423df6014993441b78a2d66f5af02e547d890f0462bded5ab.pkl  4305da1ea25c27fce08bd14001b76fd54fe42a0724bbd5168c76680a56eda5be-75122ce49fe668e80fead4a332976c53753c459a1186922c037d638e48c51c6c.pkl  4305da1ea25c27fce08bd14001b76fd54fe42a0724bbd5168c76680a56eda5be-e25b33c7fe58e0a41d3448f6f6050f34ffed7d149206dfb86aabe07ad6873fd2.pkl
hanseohomes/.cache/nix/: binary-cache-v6.sqlite  fetcher-cache-v1.sqlite
hanseohomes/.cache/replit/: __replit_disk_meta.json
hanseohomes/.cache/replit/env/: latest  latest.json
hanseohomes/.cache/replit/nix/: env.json
hanseohomes/.config/chromium/Crash Reports/pending/: 072b7d2b-269c-43f3-87d3-d73016f7de12.dmp  081f894b-14b3-454c-949e-57bd096da985.dmp  08df701a-0e8f-40fc-b2c9-7816fcaa0114.dmp  (+27 more)
hanseohomes/.config/glib-2.0/settings/: keyfile
hanseohomes/.upm/: store.json
hanseohomes/extractors/: h_home.py
hanseohomes/templates/: h_home.html  h_search.html
